[metadata]
name = duong_ml
version = 0.0.1
description = A ML project on Macbook Pro M1 Pro
long_description = file: README.md

[options]
packages = find:
package_dir =
    =src

install_requires =
    pandas
    scikit-learn
    opencv-python-headless
    matplotlib
    torch
    torchvision
    numpy
    scipy
    statsmodels

[options.packages.find]
where = src